Acabado ejercicio de eventos con giros

--- a/EjercicioEventosEtiqueta/app/src/main/res/values/strings.xml
+++ b/EjercicioEventosEtiqueta/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="rd_img_text">Imagen</string>
     <string name="accept_button_text">Aceptar</string>
     <string name="return_button_text">Volver</string>
+    <string name="angle_hint">Ángulo de giro (10-90 grados)</string>
 </resources>
