--- a/EjercicioSelectorColores/app/src/main/res/values/strings.xml
+++ b/EjercicioSelectorColores/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">EjercicioSelectorColores</string>
     <string name="titulo">COLOR RGBA</string>
+    <string name="red_text">R:</string>
+    <string name="green_text">G:</string>
+    <string name="blue_text">B:</string>
+    <string name="alpha_text">A:</string>
 </resources>
